fix(time-picker): do not overlap focus ring with other elements in high contrast #6118

--- a/src/components/time-picker/time-picker.scss
+++ b/src/components/time-picker/time-picker.scss
@@ -33,6 +33,7 @@
       @apply bg-foreground-2
         outline-none;
       z-index: theme("zIndex.header");
+      outline-offset: 0;
     }
     &:active {
       @apply bg-foreground-3;
@@ -70,6 +71,7 @@
       @apply outline-none;
       box-shadow: inset 0 0 0 2px var(--calcite-ui-brand);
       z-index: theme("zIndex.header");
+      outline-offset: 0;
     }
   }
 
